Implemented subsumes UDF and subsumes function.